feat: endpoint registration

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,16 @@
 export GITHUB_KEY=REPLACE_ME
 export GITHUB_SECRET=REPLACE_ME
+
 export GOOGLE_KEY=REPLACE_ME
 export GOOGLE_SECRET=REPLACE_ME
+
 export SESSION_SECRET=REPLACE_ME
+
+export CLIENT_PORT=8080
+export CLIENT_DB=throttlr.db
+
+export SERVER_PORT=8081
+export SERVER_DB=throttlr.db
+
 export ENV=dev
+export CALLBACK_URL=http://localhost
