feat: docker-compose

--- a/.env.sample
+++ b/.env.sample
@@ -6,11 +6,11 @@ export GOOGLE_SECRET=REPLACE_ME
 
 export SESSION_SECRET=REPLACE_ME
 
-export CLIENT_PORT=8080
 export CLIENT_DB=throttlr.db
 
-export SERVER_PORT=8081
 export SERVER_DB=throttlr.db
 
 export ENV=dev
-export CALLBACK_URL=http://localhost
+
+export CALLBACK_URL=http://localhost:8080
+export SERVER_CALLBACK_URL=http://localhost:8081
