docs: update sample env

--- a/.env.sample
+++ b/.env.sample
@@ -6,9 +6,9 @@ export GOOGLE_SECRET=REPLACE_ME
 
 export SESSION_SECRET=REPLACE_ME
 
-export CLIENT_DB=throttlr.db
+export CLIENT_DB=build/db-data/throttlr.db
 
-export SERVER_DB=throttlr.db
+export SERVER_DB=build/db-data/throttlr.db
 
 export ENV=dev
 
