feat: switch to psql

--- a/.env.sample
+++ b/.env.sample
@@ -1,16 +1,12 @@
-export GITHUB_KEY=REPLACE_ME
-export GITHUB_SECRET=REPLACE_ME
+GITHUB_KEY=REPLACE_ME
+GITHUB_SECRET=REPLACE_ME
 
-export GOOGLE_KEY=REPLACE_ME
-export GOOGLE_SECRET=REPLACE_ME
+GOOGLE_KEY=REPLACE_ME
+GOOGLE_SECRET=REPLACE_ME
 
-export SESSION_SECRET=REPLACE_ME
+SESSION_SECRET=REPLACE_ME
 
-export CLIENT_DB=build/db-data/throttlr.db
+ENV=dev
 
-export SERVER_DB=build/db-data/throttlr.db
-
-export ENV=dev
-
-export CALLBACK_URL=http://localhost:8080
-export SERVER_CALLBACK_URL=http://localhost:8081
+CALLBACK_URL=http://localhost:8080
+SERVER_CALLBACK_URL=http://localhost:8081
