--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 services:
   client:
     build:
-      context: ..
+      context: .
       dockerfile: build/Dockerfile.client
     restart: always
     ports:
-      - "8080:8080"
+      - "8090:8080"
     env_file:
-      - ../.env
+      - .env
     depends_on:
       db:
         condition: service_healthy
@@ -20,13 +20,13 @@ services:
       start_interval: 5s
   server:
     build:
-      context: ..
+      context: .
       dockerfile: build/Dockerfile.server
     restart: always
     ports:
-      - "8081:8081"
+      - "8091:8081"
     env_file:
-      - ../.env
+      - .env
     depends_on:
       db:
         condition: service_healthy
@@ -49,17 +49,11 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
       - db-data:/var/lib/postgresql/data
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./build/init.sql:/docker-entrypoint-initdb.d/init.sql
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -d ${POSTGRES_DB} -U ${POSTGRES_USER}"]
       interval: 2s
       timeout: 5s
       retries: 10
-
-  adminer:
-    image: adminer
-    restart: always
-    ports:
-      - 8090:8080
 volumes:
   db-data:
