fix: new api keys invalidated endpoints
This change aims to fix an issue wherein if a user regenerated their api
key, they lost access to any endpoints. We fix it by changing the
structure of the db so that the endpoints care about a user and said
users api key being valid

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       db:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://host.docker.internal:8080"]
+      test: ["CMD", "curl", "-f", "http://localhost:8080"]
       interval: 1m30s
       timeout: 10s
       retries: 3
@@ -31,7 +31,7 @@ services:
       db:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://host.docker.internal:8081"]
+      test: ["CMD", "curl", "-f", "http://localhost:8081"]
       interval: 1m30s
       timeout: 10s
       retries: 3
