--- a/.env.sample
+++ b/.env.sample
@@ -6,7 +6,13 @@ GOOGLE_SECRET=REPLACE_ME
 
 SESSION_SECRET=REPLACE_ME
 
+CLIENT_DB="postgres://postgres:password@host.docker.internal:5432/throttlr"
+SERVER_DB="postgres://postgres:password@host.docker.internal:5432/throttlr"
+
 ENV=dev
 
-CALLBACK_URL=http://localhost:8080
-SERVER_CALLBACK_URL=http://localhost:8081
+CLIENT_INTERNAL_URL=http://client:8090
+SERVER_INTERNAL_URL=http://server:8091
+
+CLIENT_CALLBACK_URL=http://localhost:8090
+SERVER_CALLBACK_URL=http://localhost:8091
