feat: publish docker images

--- a/.env.sample
+++ b/.env.sample
@@ -16,3 +16,7 @@ SERVER_INTERNAL_URL=http://server:8091
 
 CLIENT_CALLBACK_URL=http://localhost:8090
 SERVER_CALLBACK_URL=http://localhost:8091
+
+POSTGRES_PASSWORD=password
+POSTGRES_USER=postgres
+POSTGRES_DB=throttlr
