--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,13 +11,6 @@ services:
     depends_on:
       db:
         condition: service_healthy
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080"]
-      interval: 1m30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
-      start_interval: 5s
   server:
     build:
       context: .
@@ -30,13 +23,6 @@ services:
     depends_on:
       db:
         condition: service_healthy
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8081"]
-      interval: 1m30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
-      start_interval: 5s
   db:
     image: postgres
     restart: always
@@ -44,8 +30,10 @@ services:
     user: postgres
     ports:
       - "5432:5432"
-    env_file:
-      - db.env
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
       - db-data:/var/lib/postgresql/data
       - ./build/init.sql:/docker-entrypoint-initdb.d/init.sql
