--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
 services:
   client:
+    container_name: client
     build:
       context: .
       dockerfile: build/Dockerfile.client
@@ -11,7 +12,10 @@ services:
     depends_on:
       db:
         condition: service_healthy
+    networks:
+      - throttlr
   server:
+    container_name: server
     build:
       context: .
       dockerfile: build/Dockerfile.server
@@ -23,7 +27,10 @@ services:
     depends_on:
       db:
         condition: service_healthy
+    networks:
+      - throttlr
   db:
+    container_name: db
     image: postgres
     restart: always
     shm_size: 128mb
@@ -31,7 +38,7 @@ services:
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_DB: throttlr
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
@@ -42,5 +49,10 @@ services:
       interval: 2s
       timeout: 5s
       retries: 10
+    networks:
+      - throttlr
 volumes:
   db-data:
+networks:
+  throttlr:
+    driver: bridge
