--- a/dev-docker-compose.yml
+++ b/dev-docker-compose.yml
@@ -57,7 +57,7 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
       - db-data:/var/lib/postgresql/data
-      - ./build/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./build:/docker-entrypoint-initdb.d
     healthcheck:
       test: ["CMD-SHELL", "pg_isready"]
       interval: 2s
